# substrate

core/client/: Cargo.toml
core/client/db/: Cargo.toml
core/keystore/: Cargo.toml
core/network-libp2p/: Cargo.toml
core/primitives/: Cargo.toml
