[package]
name = "substrate-client-db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parking_lot = "0.4"
log = "0.4"
kvdb = { git = "https://github.com/Mischi/parity-common", rev="f37017dc4f75e22749740bcb7fa37b0508ef80cf" }
kvdb-rocksdb = { git = "https://github.com/Mischi/parity-common", rev="f37017dc4f75e22749740bcb7fa37b0508ef80cf" }
hash-db = { git = "https://github.com/paritytech/trie" }
substrate-primitives = { path = "../../primitives" }
sr-primitives = { path = "../../sr-primitives" }
substrate-client = { path = "../../client" }
substrate-state-machine = { path = "../../state-machine" }
parity-codec = "2.1"
parity-codec-derive = "2.1"
substrate-executor = { path = "../../executor" }
substrate-state-db = { path = "../../state-db" }
substrate-trie = { path = "../../trie" }

[dev-dependencies]
kvdb-memorydb = { git = "https://github.com/Mischi/parity-common", rev="f37017dc4f75e22749740bcb7fa37b0508ef80cf" }
substrate-keyring = { path = "../../keyring" }
substrate-test-client = { path = "../../test-client" }
